[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = [
  "tests",
]

[project]
name = "whad"

# Attention: the following version number must match the one in whad/version.py !
version = "1.2.12"

authors = [
    { name="Damien CAUQUIL" },
    { name="Romain CAYRE" },
]
readme="README.md"

license = {text = "MIT License"}
requires-python = ">=3.7, <4"
description = "Wireless protocols hacking framework"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
    "protobuf>=6.30",
    "scapy~=2.6.1",
    "pyserial~=3.5.0",
    "pycryptodomex>=3.11.0",
    "pyusb==1.2.1",
    "cryptography>=36",
    "prompt_toolkit~=3.0.48",
    "hexdump~=3.3",
    "pynput~=1.8.1",
    "requests>=2.28.0",
    "distro~=1.9",
    "websockets>=11.0.3",
    "packaging~=25.0",
    "strenum~=0.4.15",
]

[project.scripts]
whadup = "whad.tools.whadup:main"
wup = "whad.tools.whadup:main"
wanalyze = "whad.tools.wanalyze:wanalyze_main"
wsniff = "whad.tools.wsniff:wsniff_main"
winject = "whad.tools.winject:winject_main"
wshark = "whad.tools.wshark:wshark_main"
wplay = "whad.tools.wplay:wplay_main"
wdump = "whad.tools.wdump:wdump_main"
wextract = "whad.tools.wextract:wextract_main"
wfilter = "whad.tools.wfilter:wfilter_main"
wserver = "whad.tools.wserver:wserver_main"
winstall = "whad.tools.winstall:winstall_main"
wzb-enddevice = "whad.zigbee.cli.enddevice:zigbee_enddevice_main"
wble-central = "whad.ble.cli.central:ble_central_main"
wble-clone = "whad.ble.cli.clone:ble_clone_main"
wble-periph = "whad.ble.cli.peripheral:ble_periph_main"
wble-connect = "whad.ble.cli.ble_connect:ble_connect_main"
wble-spawn = "whad.ble.cli.ble_spawn:ble_spawn_main"
wble-proxy = "whad.ble.cli.ble_proxy:ble_proxy_main"
wuni-scan = "whad.unifying.cli.wuni_scan:wuni_scan_main"
wuni-mouse = "whad.unifying.cli.wuni_mouse:wuni_mouse_main"
wuni-keyboard = "whad.unifying.cli.wuni_keyboard:wuni_kb_main"

# setuptools specific
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]

include = [
    "whad*",
]
exclude = [
    "test*",
    "doc*",
]

[tool.setuptools.package-data]
whad = [
  "resources/pcaps/*.pcap",
  "resources/rules/*.rules",
  "resources/wireshark/*.lua",
  "resources/clues/CLUES_data.json",
]

[project.urls]
Homepage = "https://whad.io/"
Documentation = "https://whad.readthedocs.io/en/stable/"
Issues = "https://github.com/whad-team/whad-client/issues"
