[metadata]
name = whad
description = python library allowing to interact with offensive security tools implementing the WHAD protocol
author = 'Damien Cauquil, Romain Cayre'
author_email = 'dcauquil@quarkslab.com, rcayre@laas.fr'
license = MIT
license_files = LICENSE
platforms = unix, linux
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages =
  whad
install_requires =
  protobuf>=3.20.0,<=3.20.9
  scapy>=2.4.5
  elementpath>=2.4.0
  pyserial>=3.5.0
  pycryptodomex>=3.11.0
  pyusb>=1.2.1
python_requires = >= 3.7
package_dir =
  =.
zip_safe = no
