[metadata]
name = whad
description = python library allowing to interact with offensive security tools implementing the WHAD protocol
author = 'Damien Cauquil, Romain Cayre'
author_email = 'dcauquil@quarkslab.com, rcayre@laas.fr'
license = MIT
license_files = LICENSE
platforms = unix, linux
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: POSIX :: Linux,
  License :: OSI Approved :: MIT License

[options]
packages =
  whad
install_requires =
  protobuf>=3.20.0,<=3.20.9
  scapy>=2.5.0rc3,<=2.5.0rc3
  elementpath>=2.4.0
  pyserial>=3.5.0
  pycryptodomex>=3.11.0
  pyusb>=1.2.1
  prompt-toolkit>=3.0.36
  hexdump>=3.3
  cryptography>=36.0.0
  pytest>=7.4.0
  pynput>=1.7.7
  sphinx>=5.3.0
  sphinx-rtd-theme>=2.0.0
  sphinxcontrib-mermaid>=0.9.2

python_requires = >= 3.7
package_dir =
  =.
zip_safe = no
cmdclass =
    devices_install = setup.DevicesInstall


[options.entry_points]
console_scripts =
    whadup = whad.tools.whadup:main
    wup = whad.tools.whadup:main
    wanalyze = whad.tools.wanalyze:wanalyze_main
    wsniff = whad.tools.wsniff:wsniff_main
    winject = whad.tools.winject:winject_main
    wshark = whad.tools.wshark:wshark_main
    wplay = whad.tools.wplay:wplay_main
    wdump = whad.tools.wdump:wdump_main
    wextract = whad.tools.wextract:wextract_main
    wfilter = whad.tools.wfilter:wfilter_main
    wserver = whad.tools.wserver:wserver_main
    winstall = whad.tools.winstall:winstall_main
    wzb-enddevice = whad.zigbee.cli.enddevice:zigbee_enddevice_main
    wble-central = whad.ble.cli.central:ble_central_main
    wble-clone = whad.ble.cli.clone:ble_clone_main
    wble-periph = whad.ble.cli.peripheral:ble_periph_main
    wble-connect = whad.ble.cli.ble_connect:ble_connect_main
    wble-spawn = whad.ble.cli.ble_spawn:ble_spawn_main
    wble-proxy = whad.ble.cli.ble_proxy:ble_proxy_main
    wuni-scan = whad.unifying.cli.wuni_scan:wuni_scan_main
    wuni-mouse = whad.unifying.cli.wuni_mouse:wuni_mouse_main
    wuni-keyboard = whad.unifying.cli.wuni_keyboard:wuni_kb_main
